=====================
Django MPTT CHANGELOG
=====================

.. contents::

Trunk Changes
=============

Thu 10th Jan, 2008
------------------

* The ``tree_info`` template filter now accepts an optional argument to
  specify other tree structure information which should be made
  available.

* Added a ``tree_path`` template filter.

Wed 9th Jan, 2008
-----------------

* Split documentation into multiple files.

* Created ``mptt.forms``, with ``MoveNodeForm``.

* Removed ``mptt.queries`` - the functionality it could be used to
  manually implement is now provided by a new ``add_related_count()``
  method in ``TreeManager``.

* Tree attributes are now held to ``Model`` class' ``Options``
  (i.e. ``_meta``). This allowed a lot of refactoring, as these
  attributes no longer need to be passed around or taken from the
  class' ``TreeManager``.

* Added a ``root_nodes()`` method to ``TreeManager``.

Tue 8th Jan, 2008
-----------------

* ``TreeManager.move_node()`` now calls
  ``transaction.commit_unless_managed()`` before it returns.

* Documented the ``mptt.utils`` and ``mptt.queries`` modules.

* Split related item count queries out into ``mptt.queries``, with
  functions to create them given MPTT ``Model`` and related ``Model``
  information.

* Added a ``drilldown_tree_for_node`` template tag.

Mon 7th Jan, 2008
-----------------

* Added ``get_children()`` and ``is_leaf_node()`` methods to ``Model``
  instances.

Sun 6th Jan, 2008
-----------------

* Added some technical details about the tree structure to the
  documentation.

Sat 5th Jan, 2008
-----------------

* Finished implementing moving of nodes to be siblings of roots.

* Added ``get_next_sibling()`` and ``get_previous_sibling()`` methods
  to ``Model`` instances.

Fri 4th Jan, 2008
-----------------

* Made ``InvalidMove`` exceptions more granular - they now report on an
  invalid move being attempted with the target node itself or with one
  of its descendants.
